[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "colorednoise"
version = "0.0.1"
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
description = "Different variants of colored noise implemented in PyTorch."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy"]
keywords = ["reinforcement learning", "sum tree", "min tree", "data structure"]
license = { file = "LICENSE" }
urls = { Homepage="https://github.com/tahashieenavaz/colorednoise", Repository="https://github.com/tahashieenavaz/colorednoise", Documentation="https://github.com/tahashieenavaz/colorednoise#readme" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
colorednoise = ["*.md", "*.txt"]
