[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "colornoise"
version = "0.0.11"
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
description = "Different variants of colored noise implemented in PyTorch."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["torch"]
keywords = ["reinforcement learning", "sum tree", "min tree", "data structure"]
license = { file = "LICENSE" }
urls = { Homepage="https://github.com/tahashieenavaz/colornoise", Repository="https://github.com/tahashieenavaz/colornoise", Documentation="https://github.com/tahashieenavaz/colornoise#readme" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
colornoise = ["*.md", "*.txt"]
